--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,9 @@ services:
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
-            MYSQL_DATABASE: '${DB_DATABASE}:Laravel'
-            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}:123456'
-            MYSQL_PASSWORD: '${DB_PASSWORD}:123456'
+            MYSQL_DATABASE: ${DB_DATABASE}
+            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+            MYSQL_PASSWORD: ${DB_PASSWORD}
         volumes:
             - ./devops/db:/var/lib/mysql
         networks:
